# forcecloseoreui-android

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: ForceCloseOreUI.cpp
src/api/memory/: Hook.h
src/api/memory/android/: Hook.cpp  Memory.cpp  Memory.h
